```toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimized_image_analysis"
version = "0.1.0"
description = "CLI toolkit for arc, circle, center, distance, line, and 3D point analysis in images."
authors = [ { name = "DKG Labs", email = "dkggrouplabs@gmail.com" } ]

[project.dependencies]
opencv-python = "^4.7.0"
numpy = "^1.24.0"
click = "^8.1.0"
matplotlib = "^3.7.0"
open3d = {version = "^0.15.0", optional = true}
```